server/api_server.log
  File "/Users/chrisjohansson/Google Drive/Mild Media/Projekt/Egna Projekt/ongoing/leadreplies/server/api_server.py", line 528
    Platform settings endpoints
                               ^
IndentationError: unindent does not match any outer indentation level
